@@ -1,3 +1,10 @@
+2008-02-22  Milan Crha  <mcrha@redhat.com>
+
+	** Part of fix for bug #514836
+
+	* addressbook/e-book-backend-gal.c: (member_populate):
+	Obsoleting EVC_X_DEST_EMAIL and EVC_X_DEST_NAME and one leak fix.
+
 2008-02-18  Milan Crha  <mcrha@redhat.com>
 
 	** Part of fix for bug #515744
